<resources>
    <string name="app_name">Lyon\'s Den</string>
    <string name="drawerOpen">Navigation Drawer Open</string>
    <string name="drawerClose">Navigation Drawer Close</string>
    <string name="editAction">Edit</string>
    <string name="addAction">Add</string>
    <string name="deleteButton">Delete</string>
    <string name="helpAction">Help</string>
    <string name="doneAction">Done</string>

    <!-- Screen Titles -->
    <string name="HSTitle">Home</string>
    <string name="CalSTitle">Calendar</string>
    <string name="ConSTitle">Contact</string>
    <string name="USTitle">User</string>
    <string name="APSTitle">Propose Announcement</string>
    <string name="TSTitle">Teachers</string>
    <string name="MSTitle">Members</string>
    <string name="ClubSTitle">Club</string>
    <string name="ISTitle">Announcement</string>
    <string name="LSTitleEvents">Announcements</string>
    <string name="LSTitleClubs">Clubs</string>
    <string name="LVSTitle">Teachers</string>

    <!-- Login Screen Strings -->
    <string name="LSLoginHint">Enter Email</string>
    <string name="LSPassHint">Enter Password</string>
    <string name="LSCodeHint">Enter Sign Up Key</string>
    <string name="LSLoginButton">Log In</string>
    <string name="LSSignUpButton">Sign Up</string>
    <string name="LSMainButton">Sign Up</string>

    <!-- Home Screen Strings -->
    <string name="HSTodayIsDay">Today is day</string>
    <string name="HSDayLabelDefault">1</string>
    <string name="HSCourseCodeDefault">Course Code</string>
    <string name="HSCourseNameDefault">Course Name</string>
    <string name="HSTeacherNameDefault">Teacher Name</string>
    <string name="HSRoomNumberDefault">Room Number</string>
    <string name="HSSpare">SPARE</string>
    <string name="HSNoInternetLabel">No Internet available, please connect to the internet!</string>
    <string name="HSLateStart">Late Start</string>
    <string name="HSSpecSchedule">Special Schedule</string>

    <!-- Contact Screen Strings -->
    <string name="CSGetInTouchWithMac">Get in touch with Mac!</string>
    <string name="CSAnnouncementButton">Propose Announcement</string>
    <string name="CSRadioButton">Secret... Coming Soon!</string>
    <string name="CSTeacherButton">Contact a Teacher</string>
    <string name="CSEmergencyButton">Contact</string>
    <string name="CSReport">Report a Bug</string>
    <string name="CSHelp">Help</string>
    <string name="CSLicence">Legal</string>
    <string name="CSHelpPhoneButton">Kids Help Phone</string>
    <string name="CSWLMCIButton">WLMCI</string>
    <string name="CSContactLabel">Contact</string>
    <string name="CSMessageLabel">Who would you like to talk to?</string>
    <string name="CSCancelButton">Cancel</string>

    <!-- Announcement Proposal Screen Strings -->
    <string name="APSTitleLabel">Title:</string>
    <string name="APSDescriptionLabel">Description:</string>
    <string name="APSLocationLabel">Location:</string>
    <string name="APSTeacherLabel">Teacher Approval Login:</string>
    <string name="APSRequiredHint">Required</string>
    <string name="APSOptionalHint">Optional</string>
    <string name="APSDateButtonText">Pick a Date</string>
    <string name="APSTimeButtonText">Pick a Time</string>
    <string name="APSSubmitButtonText">Submit</string>
    <string name="APSApproveButtonText">Approve</string>
    <string name="APSUnlockButtonText">Unlock</string>

    <!-- Club Info Screen Strings -->
    <string name="ClubSMemberButton">Members</string>

    <!-- User Screen Strings -->
    <string name="USName">Display Name:</string>
    <string name="USNameHint">eg. John Stevenson</string>
    <string name="USEmail">E-Mail:</string>
    <string name="USEmailHint">eg. john.steve@example.com</string>
    <string name="USAccess">Access Level:</string>
    <string name="USAccessHint">eg. Student</string>
    <string name="USUpdateButtonText">Update Info</string>
    <string name="USLeaderButtonText">Become Club Leader</string>
    <string name="USDeleteButtonText">Delete Account</string>
    <string name="USSignOutButtonText">Sign Out</string>
    <string name="USResetPassButtonText">Reset Password</string>
    <string name="USSwitchLabel">Allow Notifications</string>

    <!-- Information Activity Strings -->
    <string name="IFSName">Name</string>
    <string name="IFSGrade">Grade</string>
    <string name="IFSCompleteButton">Complete Form</string>
    <string name="IFTName">Name</string>
    <string name="IFTDepartment">Department</string>
    <string name="IFTContactEmail">Contact Email</string>
    <string name="IFTCompleteButton">Complete Form</string>
    <string name="IFSTitle">Information Form</string>
    <string name="IFSTeacherNote">NOTE: The information you provide will be accessed by students. Please provide accurate information. Your password will be encrypted and stored for announcement approval, so remember it. For now, refrain from changing your password or contact us directly to change it.</string>
    <string name="IFTDepartmentPrompt">Select Department</string>
    <string-array name="IFTDepartments">
        <item>Administration</item>
        <item>Arts</item>
        <item>Business</item>
        <item>Co-op and Leadership</item>
        <item>Computer Science and Technology</item>
        <item>English</item>
        <item>Languages</item>
        <item>Library</item>
        <item>Mathematics</item>
        <item>Physical Education</item>
        <item>Science</item>
        <item>Social Science</item>
        <item>Special Education</item>
        <item>Student Services</item>
        <item>Staff</item>
    </string-array>
    <string name="IFSGradePrompt">Select Department</string>
    <string-array name="IFSGrades">
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <!-- Course Screen Strings -->
    <string name="CourseSCode">Course Code</string>
    <string name="CourseSCodeHint">eg. ENG4U1</string>
    <string name="CourseSName">Course Name</string>
    <string name="CourseSNameHint">eg. English</string>
    <string name="CourseSTeacher">Teacher Name</string>
    <string name="CourseSTeacherHint">eg. Mr. Englishmen</string>
    <string name="CourseSRoom">Room Number</string>
    <string name="CourseSRoomHint">eg. Rm 201</string>
    <string name="CourseSSubmitButtonText">Submit</string>
    <string name="CourseSSpareButtonText">Spare</string>
    <string name="CourseSDisclaimer">The information you provide for each course is for your benefit only. Whether the information you input is correct or not is up to you. The system will function as designed, regardless of your input.</string>

    <!-- Course View Strings -->
    <string name="CourseVTopLabel">Period Number</string>
    <string name="CourseVButton">Done</string>

    <!-- Guide Screen Strings -->
    <string name="Page1">Welcome to Den.</string>
    <string name="Page2">Here, we have created a hub for everything you need to know, to stay in the know. Including…</string>
    <string name="Page3">Quick access to essential information.</string>
    <string name="Page4">Press, hold and release the time table to enter your courses</string>
    <string name="Page5">School wide calendar at your fingertips.</string>
    <string name="Page6">Clubs.</string>
    <string name="Page7">Post announcements from your phone, anytime, anywhere.</string>
    <string name="Page8">You may enter the Den.</string>
    <string name="Swipe">Swipe left to continue</string>

    <!-- Late Start Schedule Strings -->
    <string name="LateSTitle">Late Start Day Schedule</string>
    <string name="LateSPer1">Period 1:</string>
    <string name="LateSPer2">Period 2:</string>
    <string name="LateSLunch">Lunch:</string>
    <string name="LateSPer3">Period 3:</string>
    <string name="LateSPer4">Period 4:</string>
    <string name="LateSTimeSeparator">–</string>

</resources>
