<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LDLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- User screen -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context="com.wlmac.lyonsden2_android.UserActivity">

        <android.support.v7.widget.Toolbar
            style="@style/LyonsToolBar"
            app:titleTextColor="@color/accent"
            app:title="@string/USTitle"
            android:id="@+id/toolbar">
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!-- Display Name Area -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:id="@+id/USDisplayName">

                <!-- Display Name Label -->
                <TextView
                    style="@style/UserParameterLabel"
                    android:text="@string/USName"/>

                <!-- Display Name Field -->
                <EditText
                    style="@style/UserParameterField"
                    android:hint="@string/USNameHint"
                    android:id="@+id/USNameField"/>
            </LinearLayout>

            <!-- Email Area -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/USDisplayName"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:id="@+id/USEmail">

                <!-- Email Label -->
                <TextView
                    style="@style/UserParameterLabel"
                    android:text="@string/USEmail"/>

                <!-- Email Field -->
                <EditText
                    style="@style/UserParameterField"
                    android:hint="@string/USEmailHint"
                    android:id="@+id/USEmailField"/>
            </LinearLayout>

            <!-- Access Area -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/USEmail"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:id="@+id/USAccess">

                <!-- Access Label -->
                <TextView
                    style="@style/UserParameterLabel"
                    android:text="@string/USAccess"/>

                <!-- Access Field -->
                <EditText
                    style="@style/UserParameterField"
                    android:hint="@string/USAccessHint"
                    android:id="@+id/USAccessField"/>
            </LinearLayout>

            <!-- Update Info Button -->
            <!--<Button
                style="@style/UserButton"
                android:layout_below="@id/USAccess"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:text="@string/USUpdateButtonText"
                android:id="@+id/USUpdate"/>
            -->
            <TableLayout
                android:id="@+id/USContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TableRow>
                    <!-- Become a leader Button -->
                    <Button
                        style="@style/ExtraButtonStyle"
                        android:text="@string/USLeaderButtonText"
                        android:textAlignment="center"
                        android:onClick="clubLeadershipApplication"
                        android:textSize="12sp"
                        android:id="@+id/USLeaderButton" />

                    <!-- Sign out Button -->
                    <Button
                        style="@style/ExtraButtonStyle"
                        android:textAlignment="center"
                        android:text="@string/USSignOutButtonText"
                        android:tag="signOut"
                        android:textSize="12sp"
                        android:id="@+id/USSignOut"
                        android:onClick="UAButtons" />
                </TableRow>

                <TableRow>
                    <!-- Delete Account Button -->
                    <Button
                        android:textAlignment="center"
                        style="@style/ExtraButtonStyle"
                        android:text="@string/USDeleteButtonText"
                        android:tag="deleteAcc"
                        android:textSize="12sp"
                        android:id="@+id/USDelete"
                        android:onClick="UAButtons" />

                    <!-- Reset Password Button -->
                    <Button
                        style="@style/ExtraButtonStyle"
                        android:text="@string/USResetPassButtonText"
                        android:tag="resetPass"
                        android:textSize="12sp"
                        android:id="@+id/USReset"
                        android:onClick="UAButtons" />
                </TableRow>
            </TableLayout>
            <Button
                style="@style/LyonsButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/arrow_up_48dp"
                android:layout_above="@+id/USContainer"
                android:onClick="toggleButtons"
                android:id="@+id/USToggleButton"/>
        </RelativeLayout>
    </RelativeLayout>

    <!-- Navigation drawer -->
    <ListView
        style="@style/DrawerListStyle"
        android:id="@+id/LDList"/>
</android.support.v4.widget.DrawerLayout>