<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/information_form_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wlmac.lyonsden2_android.resourceActivities.InformationFormActivity">

    <!-- Student's Information Form -->
    <LinearLayout
        android:id="@+id/IFSLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IFSName"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/accent"/>
        <EditText
            android:id="@+id/IFSName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IFSGrade"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/accent"/>
        <Spinner
            android:id="@+id/IFSGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            style="@style/LyonsButtonStyle"
            android:id="@+id/IFSCompleteButton"
            android:layout_gravity="center"
            android:text="@string/IFSCompleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Teacher's Information Form -->
    <LinearLayout
        android:id="@+id/IFTLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IFTName"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/accent"/>
        <EditText
            android:id="@+id/IFTName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IFTDepartment"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/accent"/>
        <Spinner
            android:id="@+id/IFTDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:text="@string/IFTContactEmail"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/accent"/>
        <EditText
            android:id="@+id/IFTEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAlignment="center"/>

        <Button
            style="@style/LyonsButtonStyle"
            android:id="@+id/IFTCompleteButton"
            android:layout_gravity="center"
            android:text="@string/IFTCompleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>
