<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/course_actvity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background">

    <!-- Period Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:textColor="@color/accent"
        android:textSize="17sp"
        android:id="@+id/CourseSPeriodLabel"/>

    <!-- Course Code Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CourseSPeriodLabel"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:id="@+id/CourseSName">

        <!-- Course Name Label -->
        <TextView
            android:layout_width="@dimen/USTextLabelWidth"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:gravity="end"
            android:textColor="@color/accent"
            android:textSize="16sp"
            android:id="@+id/CourseSNameLabel"
            android:text="@string/CourseSName"/>

        <!-- Course Name Field -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/CourseSNameHint"
            android:inputType="textCapWords"
            android:textSize="16sp"
            android:textColor="@color/blackText"
            android:id="@+id/CourseSNameField"/>
    </LinearLayout>

    <!-- Course Name Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CourseSName"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:id="@+id/CourseSCode">

        <!-- Course Code Label -->
        <TextView
            android:layout_width="@dimen/USTextLabelWidth"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:gravity="end"
            android:textColor="@color/accent"
            android:textSize="16sp"
            android:id="@+id/CourseSCodeLabel"
            android:text="@string/CourseSCode"/>

        <!-- Course Code Field -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/CourseSCodeHint"
            android:textSize="16sp"
            android:inputType="textCapCharacters"
            android:textColor="@color/blackText"
            android:id="@+id/CourseSCodeField"/>
    </LinearLayout>


    <!-- Teacher Name Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CourseSCode"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:id="@+id/CourseSTeacher">

        <!-- Teacher Name Label -->
        <TextView
            android:layout_width="@dimen/USTextLabelWidth"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:gravity="end"
            android:textColor="@color/accent"
            android:textSize="16sp"
            android:id="@+id/CourseSTeacherLabel"
            android:text="@string/CourseSTeacher"/>

        <!-- Teacher Name Field -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/CourseSTeacherHint"
            android:inputType="textCapWords"
            android:textSize="16sp"
            android:textColor="@color/blackText"
            android:id="@+id/CourseSTeacherField"/>
    </LinearLayout>

    <!-- Room Number Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CourseSTeacher"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:id="@+id/CourseSRoom">

        <!-- Room Number Label -->
        <TextView
            android:layout_width="@dimen/USTextLabelWidth"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:gravity="end"
            android:textColor="@color/accent"
            android:textSize="16sp"
            android:id="@+id/CourseSRoomLabel"
            android:text="@string/CourseSRoom"/>

        <!-- Room Number Field -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/CourseSRoomHint"
            android:inputType="phone"
            android:textSize="16sp"
            android:textColor="@color/blackText"
            android:id="@+id/CourseSRoomField"/>
    </LinearLayout>

    <!-- Update Info Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CourseSRoom"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:background="@drawable/button_background"
        android:text="@string/CourseSSubmitButtonText"
        android:textColor="@color/whiteText"
        android:onClick="submitChanges"
        android:id="@+id/CourseSSubbmit"/>

    <!-- Disclaimer Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/CourseSDisclaimer"
        android:textColor="@color/accent"
        android:textSize="12sp"/>
</RelativeLayout>
